FEATURE: add yookassa api for java

--- a/build.gradle
+++ b/build.gradle
@@ -35,11 +35,14 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
   //  developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
+    implementation "org.mapstruct:mapstruct:1.4.2.Final"
+    annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation "io.jsonwebtoken:jjwt:0.9.1"
 
 }
